# opengl_template

./: CMakeLists.txt  Dependency.cmake  README.md
shader/: simple.fs  simple.vs
src/: buffer.h  common.h  context.cpp  context.h  main.cpp  program.cpp  program.h  vertex_layout.h
